--- a/index.html
+++ b/index.html
@@ -457,9 +457,13 @@
                   </div>
                 </div>
               </div>
+
+
             </div>
           </div>
         </div>
+      </div>
+    </div>
   </section>
   <!---------------------- End Portfolio ----------------------->
   <!---------------------- Start Clients ----------------------->
